--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -7,19 +7,19 @@
 body {
     background-color: #d9dcd6;
 }
-
+/*mangages the header elements styling consisting of the padding,font type and colours of text*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/*fixes position of h1 in the header*/
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/*targets the ''seo' class of the horiseon logo in header and styles it separately*/
 .header h1 .seo {
     color: #d9dcd6;
 }
