--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/*handling font style and positioning of elements with the benefits class*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* benefit-lead,benefit-brand,benefit-cost positioning and styling within article element targetted*/
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,7 +100,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* targets positioning of headings within the article elments in benefit-lead,benefit-brand and benefit-cost*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,7 +115,7 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* targets images within the aside article element positioning and sizing: this includes benefit-lead img, benefit-brand img and benefit-cost img*/ 
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,7 +133,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*targets elments within the main articles style and positioning:including search-engine-optimization, .social media-marketing and .online-reputation-management*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,7 +160,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/*targets the images sizing in the main article element including: .search-engine-optimization img, .online-reputation-managemnt img and .social-media-marketing img*/
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -172,7 +172,7 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
+/*targets positioning of main article such as .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2*/
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -187,14 +187,14 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*targets styleing and positioning of the footer*/
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/*targets font size of text within the footer*/
 .footer h2 {
     font-size: 20px;
 }
